// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal (unit tests) when using a label should match the snapshot 1`] = `
<kv-modal header-title="Hello World">
  <mock:shadow-root>
    <div class="modal-overlay"></div>
    <div class="modal-container">
      <div class="top-bar">
        <div class="title">
          Hello World
        </div>
        <div class="actions">
          <slot name="more-top-actions"></slot>
          <div class="close">
            <kv-icon name="kv-close"></kv-icon>
          </div>
        </div>
      </div>
      <div class="content">
        <slot name="header"></slot>
        <div class="body">
          <slot name="body"></slot>
        </div>
        <div class="footer">
          <slot name="footer"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-modal>
`;

exports[`Modal (unit tests) when using default props should match the snapshot 1`] = `
<kv-modal>
  <mock:shadow-root>
    <div class="modal-overlay"></div>
    <div class="modal-container">
      <div class="top-bar">
        <div class="title"></div>
        <div class="actions">
          <slot name="more-top-actions"></slot>
          <div class="close">
            <kv-icon name="kv-close"></kv-icon>
          </div>
        </div>
      </div>
      <div class="content">
        <slot name="header"></slot>
        <div class="body">
          <slot name="body"></slot>
        </div>
        <div class="footer">
          <slot name="footer"></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</kv-modal>
`;
